--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,7 +1,7 @@
 version = "2.7.5"
 
 maxColumn = 120
-align = most
+align.preset = none
 continuationIndent.defnSite = 2
 assumeStandardLibraryStripMargin = true
 docstrings = JavaDoc
