Create Pokemon API integration tests, by mocking PokeAPI

--- a/core/src/main/resources/application.conf
+++ b/core/src/main/resources/application.conf
@@ -1,7 +1,9 @@
 pokeAPI{
   baseUrl="https://pokeapi.co/api/v2/"
+  baseUrl=${?POKE_API_BASE_URL}
 }
 
 translationAPI{
   baseUrl="https://api.funtranslations.com/translate/"
+  baseUrl=${?TRANSLATION_API_BASE_URL}
 }
