Add integration test scenarios

--- a/core/src/main/resources/application.conf
+++ b/core/src/main/resources/application.conf
@@ -4,6 +4,6 @@ pokeAPI{
 }
 
 translationAPI{
-  baseUrl="https://api.funtranslations.com/translate/"
+  baseUrl="https://api.funtranslations.com/"
   baseUrl=${?TRANSLATION_API_BASE_URL}
 }
